--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "http://mauacosta.github.io/the-shoppies",
-  "name": "shoppies",
+  "name": "the-shoppies",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
